[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/TileHalf.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprites/ArenaOutline.png" type="Texture" id=2]
[ext_resource path="res://scenes/ArenaManager.gd" type="Script" id=3]
[ext_resource path="res://fonts/VPPixel-Simplified.otf" type="DynamicFontData" id=4]
[ext_resource path="res://sprites/ScoreBoard.png" type="Texture" id=5]
[ext_resource path="res://sprites/HealthBar.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 70
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 70
font_data = ExtResource( 4 )

[node name="Arena" type="Node2D"]
script = ExtResource( 3 )

[node name="TileHalfRight" parent="." instance=ExtResource( 1 )]
position = Vector2( 143.451, 0 )
dark_color = Color( 0.242233, 0.488281, 0.484662, 1 )
light_color = Color( 0.572549, 0.894118, 0.980392, 1 )
duration = 1.0

[node name="TileHalfLeft" parent="." instance=ExtResource( 1 )]
position = Vector2( -144.447, 0 )
dark_color = Color( 0.552941, 0.313726, 0.313726, 1 )
light_color = Color( 0.980392, 0.698039, 0.698039, 1 )
duration = 0.5

[node name="PlayerTwoTimer" type="Label" parent="."]
visible = false
modulate = Color( 0, 0.223529, 0.321569, 1 )
margin_left = 119.08
margin_top = -78.7556
margin_right = 169.08
margin_bottom = 66.2444
custom_fonts/font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerOneTimer" type="Label" parent="."]
visible = false
modulate = Color( 0.533333, 0, 0, 1 )
margin_left = -168.709
margin_top = -78.7556
margin_right = -118.709
margin_bottom = 66.2444
custom_fonts/font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArenaOutline" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )

[node name="ScoreBoard" type="Sprite" parent="."]
position = Vector2( 0.33181, -274.197 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[node name="PlayerOneHealth" type="TextureProgress" parent="."]
modulate = Color( 0, 0.54902, 0.0745098, 1 )
margin_left = -337.534
margin_top = -216.964
margin_right = -326.534
margin_bottom = -72.9641
rect_scale = Vector2( 2, 3 )
step = 10.0
value = 100.0
rounded = true
texture_progress = ExtResource( 6 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerTwoHealth" type="TextureProgress" parent="."]
modulate = Color( 0.054902, 0.529412, 0, 1 )
margin_left = 316.095
margin_top = -216.964
margin_right = 327.095
margin_bottom = -72.9641
rect_scale = Vector2( 2, 3 )
step = 10.0
value = 100.0
rounded = true
texture_progress = ExtResource( 6 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="."]
margin_left = -56.0
margin_top = -336.0
margin_right = 66.0
margin_bottom = -278.0
custom_fonts/font = SubResource( 2 )
text = "SCORE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerTwoScore" type="Label" parent="."]
margin_left = 176.0
margin_top = -320.0
margin_right = 211.0
margin_bottom = -218.0
custom_fonts/font = SubResource( 3 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerOneScore" type="Label" parent="."]
margin_left = -192.0
margin_top = -320.0
margin_right = -157.0
margin_bottom = -218.0
custom_fonts/font = SubResource( 4 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}
